# snakesays

./: .gitignore  README.md  pyproject.toml
snakesays/: __main__.py  cli.py  snake.py
