[tool.poetry]
name = "snakesays"
version = "1.2.1"
description = "To display with effect of snake saying"
authors = ["Ishan Mahajan <imahajan0007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
